<resources>
    <string name="app_name">InventoryManagement</string>
    <string name="login">Login</string>

    <string name="mail">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>

    <string name="register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>


    <string name="cancel">Cancel</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

    <string name="termination_date">Termination Date:</string>
    <string name="status">Status</string>
    <string name="start_date">Start Date:</string>
    <string name="customer_visible">Customer Visible:</string>
    <string name="serial_no">Serial No.:</string>
    <string name="description">Description</string>
    <string name="bundle">Bundle:</string>
    <string name="order_date">Order Date:</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>

    <string name="serial_number">Serial number</string>
    <string name="href">Href</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="add_product">Add product</string>
    <string name="button">button</string>

    <string-array name="status_array">
        <item>created</item>
        <item>pendingActive</item>
        <item>cancelled</item>
        <item>active</item>
        <item>pendingTerminate</item>
        <item>terminated</item>
        <item>suspended</item>
        <item>aborted</item>
    </string-array>


    <string name="sort_date">Sort by Date</string>
    <string name="sort_active">Show only active</string>
    <string name="none">None</string>
    <string name="termination_date_2021_05_25">Termination Date: 2022.05.25.</string>
    <string name="start_date_2021_05_21">Start Date: 2021.05.21.</string>
    <string name="order_date_2021_05_25">Order Date: 2021.05.25.</string>
</resources>