<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

        <!--<TextView
            android:id="@+id/registrationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="-2dp"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textSize="24sp" />-->

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="40dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/register"
            android:textSize="30sp"
            />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"

            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:autofillHints="@string/username" />
            <!--android:layout_below="@+id/toolbar"-->

        <EditText
            android:id="@+id/userEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:autofillHints="string/mail" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userEmailEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="@string/password" />

        <EditText
            android:id="@+id/passwordAgainEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:autofillHints="@string/password_again" />

        <!--<EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordAgainEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone" />-->

        <!--<Spinner
            android:id="@+id/phoneSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/passwordAgainEditText" />-->

        <!--<EditText
            android:id="@+id/addresseEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneSpinner"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress|textMultiLine"
            android:maxLines="3"/>-->

        <RadioGroup
            android:id="@+id/accountTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_below="@+id/passwordAgainEditText" >

            <RadioButton
                android:id="@+id/customerRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_below="@+id/accountTypeGroup"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:onClick="register"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:onClick="cancel"
                android:text="@string/cancel"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

